NO-JIRA: Improve some portability issues: - Compile directly on FreeBSD using the built in uuid API - Create platform.[ch] intended to "hide-away" platform specific API code

--- a/proton-c/CMakeLists.txt
+++ b/proton-c/CMakeLists.txt
@@ -154,6 +154,7 @@ add_subdirectory(examples/messenger/c)
 
 set (qpid-proton-platform
   src/driver.c
+  src/platform.c
   ${pn_driver_ssl_impl}
 )
 
