NO-JIRA: cmake java improvements
1) Support older versions of cmake (such as v2.6)
2) As swig does not create its outputdir, create it before performing the swig-jni step

git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/branches/jni-binding@1425026 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-c/bindings/CMakeLists.txt
+++ b/proton-c/bindings/CMakeLists.txt
@@ -60,12 +60,14 @@ endif (PERLLIBS_FOUND)
 
 # Prerequisites for Java
 find_package( Java )
-if (JAVA_FOUND)
+# we have to check two variables below because older versions of cmake (such as v2.6)
+# include FindJava.cmake and FindJNI.cmake modules that don't set XXX_FOUND
+if (JAVA_FOUND OR JAVA_RUNTIME)
   find_package( JNI )
-  if (JNI_FOUND)
+  if (JNI_FOUND OR JNI_LIBRARIES)
     set (DEFAULT_JAVA ON)
-  endif (JNI_FOUND)
-endif (JAVA_FOUND)
+  endif ()
+endif ()
 
 # Shouldn't need to modify below here when adding new language binding
 foreach(BINDING ${BINDINGS})
