NO-JIRA: Extend cmake build system to compile/jar the proton-API, and compile/jar proton-JNI (which comprises of the hand rolled thunking layer + the swig generated binding code).
* Make targets are proton-api and proton-jni (or simply all).
* Jars produced are proton-api-n.n.jar and proton-jni-n.n.jar

If you are using cmake < 2.8.6, the more functional local modules UseJava/FindJava will be used in
preference to those from your cmake install.

git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/branches/jni-binding@1426246 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-c/CMakeLists.txt
+++ b/proton-c/CMakeLists.txt
@@ -63,6 +63,12 @@ else()
     add_custom_target(docs)
 endif()
 
+# Used to allow the building of the Java bindings when CMAKE_VERSION < 2.6.8
+if ( ${CMAKE_VERSION} VERSION_LESS "2.8.6" )
+  set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
+endif ()
+
+
 # Set the default SSL/TLS implementation
 find_package(OpenSSL)
 
