--- a/proton-j/contrib/proton-hawtdispatch/pom.xml
+++ b/proton-j/contrib/proton-hawtdispatch/pom.xml
@@ -18,15 +18,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
     <groupId>org.apache.qpid</groupId>
-    <artifactId>proton-project</artifactId>
+    <artifactId>proton-j</artifactId>
     <version>1.0-SNAPSHOT</version>
     <relativePath>../..</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.apache.qpid</groupId>
   <artifactId>proton-hawtdispatch</artifactId>
-  <version>1.0-SNAPSHOT</version>
 
   <properties>
     <hawtbuf-version>1.9</hawtbuf-version>
@@ -36,8 +34,8 @@
   <dependencies>
     <dependency>
       <groupId>org.apache.qpid</groupId>
-      <artifactId>proton</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <artifactId>proton-j-impl</artifactId>
+      <version>${project.parent.version}</version>
     </dependency>
     <dependency>
       <groupId>org.fusesource.hawtdispatch</groupId>
