--- a/proton-j/proton/pom.xml
+++ b/proton-j/proton/pom.xml
@@ -18,20 +18,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
     <groupId>org.apache.qpid</groupId>
-    <artifactId>proton-project</artifactId>
+    <artifactId>proton-j</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.apache.qpid</groupId>
-  <artifactId>proton</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <artifactId>proton-j-impl</artifactId>
 
   <dependencies>
     <dependency>
       <groupId>org.apache.qpid</groupId>
       <artifactId>proton-api</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>${project.parent.version}</version>
     </dependency>
 
     <dependency>
