--- a/tests/proton-system-tests/pom.xml
+++ b/tests/proton-system-tests/pom.xml
@@ -1,17 +1,21 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.apache</groupId>
-    <artifactId>apache</artifactId>
-    <version>12</version>
+    <groupId>org.apache.qpid</groupId>
+    <artifactId>proton-project</artifactId>
+    <version>1.0-SNAPSHOT</version>
   </parent>
-  <groupId>org.apache.qpid</groupId>
-  <artifactId>proton-system-tests</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
 
-  <properties>
-    <junit-version>4.10</junit-version>
-  </properties>
+  <artifactId>proton-system-tests</artifactId>
+
+  <description><![CDATA[The Proton system tests execute against either the Java or the C implementations, based on the chosen profile.
+
+To execute, run either "mvn test -P proton-j" or "mvn test -P proton-c".
+
+The proton-c profile looks for the JNI jar and native libraries under directory <basedir>/proton-c/build.
+To override this, run Maven like so: "mvn test -P proton-c -Dproton-c-build-dir=/path/to/build/dir".
+]]>
+  </description>
 
   <dependencies>
     <dependency>
@@ -23,45 +27,56 @@
     <dependency>
       <groupId>org.apache.qpid</groupId>
       <artifactId>proton-api</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>${project.parent.version}</version>
     </dependency>
   </dependencies>
 
   <profiles>
     <profile>
       <id>proton-j</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
       <dependencies>
         <dependency>
           <groupId>org.apache.qpid</groupId>
-          <artifactId>proton</artifactId>
-          <version>1.0-SNAPSHOT</version>
+          <artifactId>proton-j-impl</artifactId>
+          <version>${project.parent.version}</version>
           <scope>runtime</scope>
         </dependency>
       </dependencies>
     </profile>
     <profile>
       <id>proton-c</id>
+      <properties>
+        <!-- Uses the JNI jar and the native libraries, neither of which are built by Maven,
+             therefore their location needs to be set explicitly in the following properties. -->
+        <proton-c-build-dir>${basedir}/../../proton-c/buildX</proton-c-build-dir>
+        <jni-native-path>${proton-c-build-dir}:${proton-c-build-dir}/bindings/java</jni-native-path>
+        <jni-jar>${proton-c-build-dir}/bindings/java/proton-jni.jar</jni-jar>
+      </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <forkMode>once</forkMode>
+              <argLine>-Djava.library.path=${jni-native-path}</argLine>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
       <dependencies>
-        <!--  PHTODO -->
+        <dependency>
+          <groupId>org.apache.qpid</groupId>
+          <artifactId>proton-jni</artifactId>
+          <version>${project.parent.version}</version>
+          <scope>system</scope>
+          <systemPath>${jni-jar}</systemPath>
+        </dependency>
       </dependencies>
     </profile>
   </profiles>
-
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
-          <optimize>true</optimize>
-          <debug>true</debug>
-          <showDeprecation>true</showDeprecation>
-          <showWarnings>true</showWarnings>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
 
 </project>
