NO-JIRA: Bug fix: fix relative path for the proton-system-tests pom.xml.
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/branches/jni-binding@1429883 13f79535-47bb-0310-9956-ffa450edef68

--- a/tests/proton-system-tests/pom.xml
+++ b/tests/proton-system-tests/pom.xml
@@ -4,6 +4,7 @@
     <groupId>org.apache.qpid</groupId>
     <artifactId>proton-project</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <relativePath>../../pom.xml</relativePath>
   </parent>
 
   <artifactId>proton-system-tests</artifactId>
