PROTON-194: consolidated Python and Java system tests in a single Maven project called 'tests'.
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/branches/jni-binding@1434699 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
 
   <modules>
     <module>proton-j</module>
-    <module>tests/proton-system-tests</module>
+    <module>tests</module>
   </modules>
     
 </project>
