--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -22,7 +22,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.apache.qpid</groupId>
-  <artifactId>proton-system-tests</artifactId>
+  <artifactId>tests</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <description><![CDATA[The Proton system tests execute against either the Java or the C implementations, based on the chosen profile.
@@ -62,6 +62,12 @@ To override this, run Maven like so: "mvn test -P proton-c -Dproton-c-build-dir=
       <groupId>org.apache.qpid</groupId>
       <artifactId>proton-api</artifactId>
       <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+        <groupId>org.python</groupId>
+        <artifactId>jython-standalone</artifactId>
+        <version>2.5.3</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
@@ -113,4 +119,9 @@ To override this, run Maven like so: "mvn test -P proton-c -Dproton-c-build-dir=
     </profile>
   </profiles>
 
+  <parent>
+    <groupId>org.apache</groupId>
+    <artifactId>apache</artifactId>
+    <version>12</version>
+  </parent>
 </project>
