PROTON-194: top-level pom's modules profile-specific to avoid building/testing more than is needed. Also moved Java's proton.py to correct place
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/branches/jni-binding@1435260 13f79535-47bb-0310-9956-ffa450edef68

--- a/design/api-reconciliation/pom.xml
+++ b/design/api-reconciliation/pom.xml
@@ -108,5 +108,6 @@ Can be run using sensible defaults using &quot;mvn exec:java&quot;</description>
     <groupId>org.apache</groupId>
     <artifactId>apache</artifactId>
     <version>12</version>
+    <relativePath></relativePath>
   </parent>
 </project>
