--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -126,5 +126,6 @@ To override this, run Maven like so: &quot;mvn test -P proton-c -Dproton-c-build
     <groupId>org.apache</groupId>
     <artifactId>apache</artifactId>
     <version>12</version>
+    <relativePath></relativePath>
   </parent>
 </project>
