PROTON-194: made proton-j the default profile in top level pom. Also Improved JythonTest error reporting
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/branches/jni-binding@1438467 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -34,16 +34,19 @@
 
   <profiles>
     <profile>
-      <id>proton-c</id>
+      <id>proton-j</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
       <modules>
-        <module>proton-j/proton-api</module>
+        <module>proton-j</module>
         <module>tests</module>
       </modules>
     </profile>
     <profile>
-      <id>proton-j</id>
+      <id>proton-c</id>
       <modules>
-        <module>proton-j</module>
+        <module>proton-j/proton-api</module>
         <module>tests</module>
       </modules>
     </profile>
